dev/deployment.yaml
apiVersion: apps/v1

kind: Deployment
metadata:
  name: myapp-deployment
spec:
  selector:
    matchLabels:
      app: myapp
  replicas: 1
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
        - name: myapp
          # image: samleung/hello-world:latest
          image: hcwxd/blue-whale
          ports:
            # - containerPort: 8085 # samleung/hello-world:latest
            - containerPort: 3000
          resources:
            limits:
              cpu: 50m
              memory: 32Mi
            requests:
              cpu: 10m
              memory: 16Mi
