dev/ingress.yaml
apiVersion: networking.k8s.io/v1beta1

kind: Ingress

metadata:
  name: myapp-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
      - myapp.k8s.dev.one2cloud.co
    secretName: myapp-certification-tls
  rules:
  - host: myapp.k8s.dev.one2cloud.co
    http:
      paths:
      - backend:
          serviceName: myapp-service
          servicePort: 80
